boreal/tests/assets/invalid_files/compilation/invalid_identifier_type4.yar
// [error: invalid identifier type]
import "pe"

rule c {
    condition:
        pe() == /aab/
}
